<resources>
    <string name="app_name">My Trashy App</string>
    <string name="v1">idi nah</string>
    <string name="yy">Hello World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="ui_header">UI</string>
    <string name="sync_header">Sync</string>

    <!-- UI Preferences -->
    <string name="ui_title">Light mode</string>
    <string name="light_mode_on">Light mode</string>
    <string name="light_mode_off">Dark mode</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="don_t_have_an_account_register_now"><![CDATA[don_t_have_an_account_register_now\">Dont\'t have an acc. Register now]]></string>
    <string name="password">Password</string>
    <string name="email_hint">Password</string>
    <string name="Profile">Profile</string>
    <string name="Email_not_found">Email not found!</string>
    <string name="song_name">Song name</string>
    <string name="artist">Artist</string>

</resources>